--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   retrofit_generator: ^7.0.8
   cached_network_image: ^3.2.3
   intl: ^0.18.1
+  flutter_keyboard_visibility: ^5.4.1
 
 dev_dependencies:
   flutter_test:
